# codespaces-blank

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
services/service-a/: Dockerfile  pyproject.toml
services/service-a/src/service_a/: __init__.py  __main__.py  server.py  service_a_pb2.py
services/service-b/: Dockerfile  pyproject.toml
services/service-b/app/: main.py
services/service-b/src/service_b/: __main__.py
services/service-c/: Dockerfile  pyproject.toml
services/service-c/app/: main.py  service_a_pb2.py  service_a_pb2_grpc.py
services/service-c/app/service_c/: __init__.py  main.py  service_a_pb2_grpc.py
services/service-c/service_c/: main.py  service_a_pb2.py  service_a_pb2_grpc.py
services/service-c/src/: service_a.proto
services/service-c/src/service_c/: __init__.py  __main__.py
